@@ -1,5 +1,10 @@
 2015-12-24  Corinna Vinschen  <corinna@vinschen.de>
 
+	* sec_acl.cc (acltotext32): Use tmp_pathbuf rather than stack buffer.
+	(aclfromtext32): Ditto.
+
+2015-12-24  Corinna Vinschen  <corinna@vinschen.de>
+
 	* sec_acl.cc: Cosmetic changes.
 
 2015-12-18  Corinna Vinschen  <corinna@vinschen.de>
